created projects display in showcase state

--- a/public/css/sidenav.css
+++ b/public/css/sidenav.css
@@ -100,7 +100,9 @@
   text-align: center;
   padding-right: 25px;
 }
-
+.portfolio-item {
+    margin-bottom: 25px;
+}
 /*Media*/
 
 @media(min-width:768px) {
