--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -1,3 +1,44 @@
 <div class="container-fluid">
-  <h1>Showcase</h1->
+  <!-- Portfolio Item Heading -->
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Project Showcase
+        <small></small>
+      </h1>
+    </div>
+  </div>
+
+  <!-- Portfolio Item Row -->
+  <div class="row" ng-show="query">
+    <div class="col-md-8" ng-repeat="project in projects | filter: { title: query }">
+      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+    </div>
+
+    <div class="col-md-4" ng-repeat="project in projects | filter: { title: query }">
+      <h3>Project Description</h3>
+      <p>{{project.description}}</p>
+      <h3>Project Details</h3>
+      <ul>
+        <li>Lorem Ipsum</li>
+        <li>Dolor Sit Amet</li>
+        <li>Consectetur</li>
+        <li>Adipiscing Elit</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Related Projects Row -->
+  <div class="row">
+    <div class="col-lg-12">
+      <h3 class="page-header">Other Projects</h3>
+    </div>
+
+    <div class="col-sm-3 col-xs-6" ng-repeat="project in projects">
+      <a href="" ng-click="showLanguage(project.title)">
+        {{project.title}}
+        <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+      </a>
+    </div>
+
+  </div>
 </div>
