--- a/public/css/sidenav.css
+++ b/public/css/sidenav.css
@@ -88,6 +88,8 @@
   top: 20px;
   display: block;
   margin: 0 auto;
+  height: 125px;
+  width: 125px;
 }
 #menu-toggle {
   float: left;
@@ -100,9 +102,23 @@
   text-align: center;
   padding-right: 25px;
 }
+/*Showcase*/
 .portfolio-item {
     margin-bottom: 25px;
 }
+.lg-project-pic{
+height: 400px;
+width: 700px;
+}
+.sm-project-pic{
+height: 200px;
+width: 500px;
+}
+.intro-social-buttons{
+  padding-top: 20px;
+}
+
+
 /*Media*/
 
 @media(min-width:768px) {
