--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,3 +1,34 @@
 <div class="container-fluid">
-  <h1>landing Page</h1->
+  <div class="intro-header">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="intro-message">
+          <h1>Ivan Baena</h1>
+          <h3>Full Stack web Developer</h3>
+
+          <ul class="list-inline intro-social-buttons">
+            <li>
+              <a href="https://twitter.com/NotThefakeIB" target="_blank" class="btn btn-default btn-lg">
+                <i class="fa fa-twitter fa-fw"></i>
+                <span class="network-name">Twitter</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/ibaena" target="_blank" class="btn btn-default btn-lg">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com/in/ivanbaena" target="_blank" class="btn btn-default btn-lg">
+                <i class="fa fa-linkedin fa-fw"></i>
+                <span class="network-name">Linkedin</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
