--- a/public/views/partials/profile.html
+++ b/public/views/partials/profile.html
@@ -1,3 +1,35 @@
-<div class="container-fluid">
-  <h1>Profile</h1->
+<div id="Carousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="Carousel" data-slide-to="0" class="active"></li>
+    <li data-target="Carousel" data-slide-to="1"></li>
+    <li data-target="Carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="../public/img/headlineSlide.jpg" class="img-responsive">
+      <div class="carousel-caption" id="intro-slide">
+        <h2>{{about.full_name}}</h2>
+          <p>{{about.headline}}<p>
+        <h3>"{{about.aim}}"</h3>
+      </div>
+    </div>
+    <div class="item">
+      <img src="../public/img/bioSlide.jpg" class="img-responsive">
+      <div class="carousel-caption" id="intro-slide">
+        <h2>{{about.bio_short}}</h2>
+      </div>
+    </div>
+    <div class="item">
+      <img src="../public/img/hobbySlide.jpg" class="img-responsive">
+    </div>
+    <div class="item">
+      <img src="../public/img/longBioSlide.jpg" class="img-responsive">
+    </div>
+  </div>
+  <span class="left carousel-control" data-target="#Carousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </span>
+  <span class="right carousel-control" data-target="#Carousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </span>
 </div>
