--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -9,20 +9,31 @@
   </div>
 
   <!-- Portfolio Item Row -->
-  <div class="row" ng-show="query">
-    <div class="col-md-8" ng-repeat="project in projects | filter: { title: query }">
-      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+  <div class="row" ng-show="query" ng-repeat="project in projects | filter: { title: query }">
+    <div class="col-md-8">
+      <img class="img-responsive lg-project-pic" src="{{project.image}}" alt="">
+      <ul class="list-inline intro-social-buttons">
+        <li>
+          <a href="{{project.url}}" target="_blank" class="btn btn-default btn-lg">
+            <i class="fa fa-play-circle fa-fw"></i>
+            <span class="network-name">Demo</span>
+          </a>
+        </li>
+        <li>
+          <a href="{{project.github}}" target="_blank" class="btn btn-default btn-lg">
+            <i class="fa fa-github fa-fw"></i>
+            <span class="network-name">Github</span>
+          </a>
+        </li>
+      </ul>
     </div>
 
-    <div class="col-md-4" ng-repeat="project in projects | filter: { title: query }">
+    <div class="col-md-4">
       <h3>Project Description</h3>
       <p>{{project.description}}</p>
-      <h3>Project Details</h3>
-      <ul>
-        <li>Lorem Ipsum</li>
-        <li>Dolor Sit Amet</li>
-        <li>Consectetur</li>
-        <li>Adipiscing Elit</li>
+      <h3>Technologies Used</h3>
+      <ul ng-repeat="item in project.technologies">
+        <li>{{item}}</li>
       </ul>
     </div>
   </div>
@@ -30,13 +41,13 @@
   <!-- Related Projects Row -->
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Other Projects</h3>
+      <h3 class="page-header">Projects</h3>
     </div>
 
     <div class="col-sm-3 col-xs-6" ng-repeat="project in projects">
       <a href="" ng-click="showLanguage(project.title)">
         {{project.title}}
-        <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+        <img class="img-responsive portfolio-item sm-project-pic" src="{{project.image}}" alt="">
       </a>
     </div>
 
