added styles to navigation

--- a/public/views/partials/message.html
+++ b/public/views/partials/message.html
@@ -1,3 +1,12 @@
 <div class="container-fluid">
-  <h1>Message</h1->
+  <div class="PictureCube-container">
+    <div class="cube show-front">
+      <figure class="front"><img src="1.jpg"/></figure>
+      <figure class="back"><img src="2.jpg"/></figure>
+      <figure class="right"><img src="3.jpg"/></figure>
+      <figure class="left"><img src="4.jpg"/></figure>
+      <figure class="top"><img src="5.jpg"/></figure>
+      <figure class="bottom"><img src="6.jpg"/></figure>
+    </div>
+  </div>
 </div>
