--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,19 +1,69 @@
+body {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 /*profile*/
-.item.slider{
+
+.item.slider {
   height: 400px;
 }
-#headline {
-  padding-bottom: 300px;
+#tags {
+  font-size: 20px;
 }
-
-small.subinverse{
-  color: white;
+#interests {
+  list-style: none;
+  text-align: center;
 }
-
-.carousel-inner > .item > img{
-       width:100%;
-       height:600px;
-     }
+#quote {
+  color: white !important;
+  font-size: 16px;
+  font-style: italic;
+}
+.aboutText{
+  font-size: 24px;
+}
+.interestText{
+  font-size: 18px;
+}
+.lgMargin{
+  margin-bottom: 160px;
+  width: auto;
+  z-index: 2;
+  opacity: .9;
+  text-align: center;
+}
+.smMargin{
+  margin-bottom: 80px;
+  width: auto;
+  z-index: 2;
+  opacity: .9;
+  text-align: center;
+}
+.carousel-inner > .item > img {
+  width: 100%;
+  height: 600px;
+}
+.carousel-fade .carousel-inner .item {
+  opacity: 0;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+}
+.carousel-fade .carousel-inner .active {
+  opacity: 1;
+}
+.carousel-fade .carousel-inner .active.left, .carousel-fade .carousel-inner .active.right {
+  left: 0;
+  opacity: 0;
+  z-index: 1;
+}
+.carousel-fade .carousel-inner .next.left, .carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
+.carousel-fade .carousel-control {
+  z-index: 2;
+}
 
 /**/
 
@@ -21,9 +71,9 @@ small.subinverse{
   padding-bottom: 50px;
   text-align: center;
   color: #f8f8f8;
-  background: url(/public/img/landing.jpg);
+  /*background: url(/public/img/landing.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover;*/
 }
 .intro-message {
   padding-top: 100px;
