--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="../public/css/sidenav.css"/>
     <link rel="stylesheet" href="../public/css/magic.css">
     <link rel="stylesheet" href="../public/css/landing.css">
+    <link rel="stylesheet" href="../public/css/preloader.css">
+    <link rel="stylesheet" href="../public/css/cube.css">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+
   </head>
   <body ng-controller="sideNavCtrl">
     <div id="wrapper" ng-class="{'toggled': showNav}">
@@ -29,7 +33,7 @@
       </a>
       <div id="sidebar-wrapper" ng-class="{'toggled': showNav}">
         <ul class="sidebar-nav">
-          <a ui-sref="home">
+          <a ui-sref="home" ng-click="activeNav()">
             <div>
               <img src="/public/img/profile.jpg" class="img-circle" id="sidebar-Pic" alt="Circular Image">
             </div>
@@ -40,25 +44,25 @@
             </a>
           </li>
           <li>
-            <a ui-sref="profile">
+            <a ui-sref="profile" class="eigth before after" ng-click="activeNav()">
               <span class="menu-text">About</span>
             </i>
           </a>
         </li>
         <li>
-          <a ui-sref="showcase">
+          <a ui-sref="showcase" class="eigth before after" ng-click="activeNav()">
             <span class="menu-text">Showcase</span>
           </i>
         </a>
       </li>
       <li>
-        <a ui-sref="code">
+        <a ui-sref="code" class="eigth before after" ng-click="activeNav()">
           <span class="menu-text">Languages</span>
         </i>
       </a>
     </li>
     <li>
-      <a ui-sref="message">
+      <a ui-sref="message" class="eigth before after" ng-click="activeNav()">
         <span class="menu-text">Contact</span>
       </i>
     </a>
@@ -69,17 +73,16 @@
 <!-- /#sidebar-wrapper -->
 
 <!-- Page Content -->
-<div id="page-content-wrapper" ng-class="{'toggled': showNav}">
+<div id="page-content-wrapper" ng-class="{'toggled': showNav, 'magictime puffIn': fadeInContent}">
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 col-xs-12">
       <div ui-view></div>
     </div>
   </div>
 </div>
 </div>
 <!-- /#page-content-wrapper -->
-
 </div>
 <!-- /#wrapper -->
 
@@ -87,10 +90,5 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../public/js/bootquery.js"></script>
-<!-- Script to Activate the Carousel -->
-<script>
-$('.carousel').carousel({
-    interval: 5000 //changes the speed
-})
-</script>
+
 </html>
