--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,34 +1,45 @@
 <div class="container-fluid">
-  <div class="intro-header">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="intro-message">
-          <h1>Ivan Baena</h1>
-          <h3>Full Stack web Developer</h3>
 
-          <ul class="list-inline intro-social-buttons">
-            <li>
-              <a href="https://twitter.com/NotThefakeIB" target="_blank" class="btn btn-default btn-lg">
-                <i class="fa fa-twitter fa-fw"></i>
-                <span class="network-name">Twitter</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/ibaena" target="_blank" class="btn btn-default btn-lg">
-                <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://linkedin.com/in/ivanbaena" target="_blank" class="btn btn-default btn-lg">
-                <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">Linkedin</span>
-              </a>
-            </li>
-          </ul>
+  <div id="Carousel" class="carousel slide">
+    <div class="carousel-inner">
+
+      <div class="item active">
+        <img src="../public/img/landing.jpg" class="img-responsive">
+        <div class="carousel-caption">
+          <div class="intro-header">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="intro-message">
+                  <h1>Ivan Baena</h1>
+                  <h3>Full Stack web Developer</h3>
+
+                  <ul class="list-inline intro-social-buttons">
+                    <li>
+                      <a href="https://twitter.com/NotThefakeIB" target="_blank" class="btn btn-default btn-lg">
+                        <i class="fa fa-twitter fa-fw"></i>
+                        <span class="network-name">Twitter</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/ibaena" target="_blank" class="btn btn-default btn-lg">
+                        <i class="fa fa-github fa-fw"></i>
+                        <span class="network-name">Github</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://linkedin.com/in/ivanbaena" target="_blank" class="btn btn-default btn-lg">
+                        <i class="fa fa-linkedin fa-fw"></i>
+                        <span class="network-name">Linkedin</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
   </div>
+
 </div>
