--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <!-- Portfolio Item Heading -->
-  <div class="row">
-    <div class="col-lg-12">
+  <div class="row" ng-show="query" ng-repeat="project in projects | filter: { title: query }">
+    <div class="col-lg-12" ng-class="">
       <h1 class="page-header">Project Showcase
-        <small></small>
+        <small>{{project.title}}</small>
       </h1>
     </div>
   </div>
