--- a/public/css/cube.css
+++ b/public/css/cube.css
@@ -1,20 +1,82 @@
-/* Vendor prefixes removed for readability */
-.cube .front {
-	/* No X/Y rotation needed since the front is */
-	/* already facing forward. */
+.wrap {
+  margin-top: 150px;
+  perspective: 1000px;
+  perspective-origin: 50% 50%;
 }
-.cube .back {
-	transform: rotateX( -180deg );
+.cubeIcons {
+  height: 90px;
+  display: block;
+  margin: 0 auto;
 }
-.cube .right {
-	transform: rotateY( 90deg );
+.cube {
+  margin: auto;
+  position: relative;
+  height: 200px;
+  width: 200px;
+  transform-style: preserve-3d;
 }
-.cube .left {
-	transform: rotateY( -90deg );
+.cube > div {
+  position: absolute;
+  box-sizing: border-box;
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+  opacity: 0.9;
+  background-color: #000;
+  border: solid 1px #eeeeee;
+  color: #ffffff;
 }
-.cube .top {
-	transform: rotateX( 90deg );
+.front {
+  transform: translateZ(100px);
 }
-.cube .bottom {
-	transform: rotateX( -90deg );
+.back {
+  transform: translateZ(-100px) rotateY(180deg);
+}
+.right-side {
+  transform: rotateY(-270deg) translateX(100px);
+  transform-origin: top right;
+}
+.left-side {
+  transform: rotateY(270deg) translateX(-100px);
+  transform-origin: center left;
+}
+.top {
+  transform: rotateX(-270deg) translateY(-100px);
+  transform-origin: top center;
+}
+.bottom {
+  transform: rotateX(270deg) translateY(100px);
+  transform-origin: bottom center;
+}
+@keyframes rotate {
+  from {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  to {
+    transform: rotateX(360deg) rotateY(360deg);
+  }
+}
+.cube {
+  animation: rotate 20s infinite linear;
+}
+.wrap:hover .front {
+  transform: translateZ(200px);
+}
+.wrap:hover .back {
+  transform: translateZ(-200px) rotateY(180deg);
+}
+.wrap:hover .right-side {
+  transform: rotateY(-270deg) translateZ(100px) translateX(100px);
+}
+.wrap:hover .left-side {
+  transform: rotateY(270deg) translateZ(100px) translateX(-100px);
+}
+.wrap:hover .top {
+  transform: rotateX(-270deg) translateZ(100px) translateY(-100px);
+}
+.wrap:hover .bottom {
+  transform: rotateX(270deg) translateZ(100px) translateY(100px);
+}
+.cube > div {
+  transition: transform 0.2s ease-in;
 }
