--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -4,65 +4,92 @@ body {
 
 /*profile*/
 
-.item.slider {
-  height: 400px;
+.profile-img{
+
 }
-#tags {
-  font-size: 20px;
+.divider{
+  padding-bottom: 20px;
 }
-#interests {
-  list-style: none;
-  text-align: center;
+.featurette-divider {
+  margin: 80px 0;
 }
-#quote {
-  color: white !important;
-  font-size: 16px;
-  font-style: italic;
+.featurette {
+  overflow: hidden;
 }
-.aboutText{
-  font-size: 24px;
+.featurette-image.pull-left {
+  margin-right: 40px;
 }
-.interestText{
-  font-size: 18px;
+.featurette-image.pull-right {
+  margin-left: 40px;
 }
-.lgMargin{
-  margin-bottom: 160px;
-  width: auto;
-  z-index: 2;
-  opacity: .9;
-  text-align: center;
+.featurette-heading {
+  font-size: 50px;
 }
-.smMargin{
-  margin-bottom: 80px;
-  width: auto;
-  z-index: 2;
-  opacity: .9;
-  text-align: center;
+footer {
+  margin: 50px 0;
 }
-.carousel-inner > .item > img {
-  width: 100%;
-  height: 600px;
+@media(max-width:1200px) {
+  .featurette-divider {
+    margin: 50px 0;
+  }
+  .featurette-image.pull-left {
+    margin-right: 20px;
+  }
+  .featurette-image.pull-right {
+    margin-left: 20px;
+  }
+  .featurette-heading {
+    font-size: 35px;
+  }
 }
-.carousel-fade .carousel-inner .item {
-  opacity: 0;
-  -webkit-transition-property: opacity;
-  -moz-transition-property: opacity;
-  -o-transition-property: opacity;
-  transition-property: opacity;
+@media(max-width:991px) {
+  .featurette-divider {
+    margin: 40px 0;
+  }
+  .featurette-image {
+    max-width: 50%;
+  }
+  .featurette-image.pull-left {
+    margin-right: 10px;
+  }
+  .featurette-image.pull-right {
+    margin-left: 10px;
+  }
+  .featurette-heading {
+    font-size: 30px;
+  }
 }
-.carousel-fade .carousel-inner .active {
-  opacity: 1;
+@media(max-width:768px) {
+  .container-fluid {
+    margin: 0 15px;
+  }
+  .featurette-divider {
+    margin: 40px 0;
+  }
+  .featurette-heading {
+    font-size: 25px;
+  }
 }
-.carousel-fade .carousel-inner .active.left, .carousel-fade .carousel-inner .active.right {
-  left: 0;
-  opacity: 0;
-  z-index: 1;
+@media(max-width:668px) {
+  .featurette-divider {
+    margin: 30px 0;
+  }
 }
-.carousel-fade .carousel-inner .next.left, .carousel-fade .carousel-inner .prev.right {
-  opacity: 1;
-}
-.carousel-fade .carousel-control {
-  z-index: 2;
+@media(max-width:375px) {
+  .featurette-divider {
+    margin: 10px 0;
+  }
+  .featurette-image {
+    max-width: 100%;
+  }
+  .featurette-image.pull-left {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .featurette-image.pull-right {
+    margin-bottom: 10px;
+    margin-left: 0;
+  }
 }
 
 /**/
