--- a/public/css/sidenav.css
+++ b/public/css/sidenav.css
@@ -97,71 +97,82 @@
   z-index: 999;
   opacity: 0.8;
 }
-#side-name{
+#side-name {
   padding-top: 10px;
   text-align: center;
   padding-right: 25px;
 }
 
-/**/
-a.eigth:before{
+/*SideNav Links*/
+
+a.eigth:before {
+  left: 0;
+}
+a.eigth:after {
+  right: 0;
+}
+a.before:hover:before, a.after:hover:after {
+  width: 100%;
+}
+a.eigth, a.eigth:visited, a.eigth:hover, a.eigth:active {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: relative;
+  transition: 0.5s color ease;
+  text-decoration: none;
+  color: white;
+  font-size: 2.5em;
+}
+a:hover {
+  color: black;
+}
+a.before:before, a.after:after {
+  content: "";
+  transition: 0.5s all ease;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+}
+a.before:before {
+  top: -0.25em;
+}
+a.after:after {
+  bottom: -0.25em;
+}
+a.before:before, a.after:after {
+  height: 5px;
+  height: 0.35rem;
+  width: 0;
+  background: white;
+}
+a.first:after{
   left:0;
 }
-a.eigth:after{
-  right:0;
+a.first, a.first:visited, a.first:hover, a.first:active {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: relative;
+  transition: 0.5s color ease;
+  text-decoration: none;
+  color: black;
+  font-size: 2.5em;
 }
-a.before:hover:before,a.after:hover:after{
-  width:100%;
-}
-a.eigth,a.eigth:visited,a.eigth:hover,a.eigth:active{
-  -webkit-backface-visibility:hidden;
-          backface-visibility:hidden;
-	position:relative;
-  transition:0.5s color ease;
-	text-decoration:none;
-	color:white;
-	font-size:2.5em;
-}
-a:hover{
-	color:black;
-}
-a.before:before,a.after:after{
-  content: "";
-  transition:0.5s all ease;
-  -webkit-backface-visibility:hidden;
-          backface-visibility:hidden;
-  position:absolute;
-}
-a.before:before{
-  top:-0.25em;
-}
-a.after:after{
-  bottom:-0.25em;
-}
-a.before:before,a.after:after{
-  height:5px;
-  height:0.35rem;
-  width:0;
-  background:white;
-}
-
-
 /*Showcase*/
+
 .portfolio-item {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
-.lg-project-pic{
-height: 400px;
-width: 700px;
+.lg-project-pic {
+  height: 400px;
+  width: 700px;
 }
-.sm-project-pic{
-height: 200px;
-width: 500px;
+.sm-project-pic {
+  height: 200px;
+  width: 500px;
 }
-.intro-social-buttons{
+.intro-social-buttons {
   padding-top: 20px;
 }
-
 
 /*Media*/
 
