--- a/public/views/index.html
+++ b/public/views/index.html
@@ -73,7 +73,7 @@
 <!-- /#sidebar-wrapper -->
 
 <!-- Page Content -->
-<div id="page-content-wrapper" ng-class="{'toggled': showNav, 'magictime puffIn': fadeInContent}">
+<div id="page-content-wrapper" ng-class="{'toggled': showNav, 'magictime swashIn': fadeInContent}">
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12 col-xs-12">
