--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -1,3 +1,28 @@
 <div class="container-fluid">
-  <h1>Code</h1->
+  <div class="wrap">
+    <div class="cube">
+      <div class="front">
+        <img class="cubeIcons responsive-img" src="../public/img/cube/angular.png"/>
+      </div>
+      <div class="back">
+        <img class="cubeIcons responsive-img" src="../public/img/cube/html5.png"/>
+      </div>
+      <div class="top">
+        <img class="cubeIcons responsive-img" src="../public/img/cube/css3.png"/>
+      </div>
+      <div class="bottom">
+        <img class="cubeIcons responsive-img" src="../public/img/cube/js.png"/>
+        <img class="cubeIcons responsive-img" src="../public/img/cube/jquery.png"/>
+      </div>
+      <div class="left-side">
+        <img class="cubeIcons responsive-img" src="../public/img/cube/mongodb.png"/>
+        <img class="cubeIcons responsive-img" src="../public/img/cube/mysql.png"/>
+      </div>
+      <div class="right-side">
+        <img class="cubeIcons responsive-img" src="../public/img/cube/node.png"/>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-12 col-xs-12"></div>
 </div>
