--- a/public/views/partials/profile.html
+++ b/public/views/partials/profile.html
@@ -1,90 +1,49 @@
+<!-- Page Content -->
 <div class="container-fluid">
-  <div id="Carousel" class="carousel slide carousel-fade">
-    <ol class="carousel-indicators">
-      <li data-target="Carousel" data-slide-to="0" class="active"></li>
-      <li data-target="Carousel" data-slide-to="1"></li>
-      <li data-target="Carousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
+  <h1>{{about.full_name}}</h1>
+  <hr class="divider">
 
-      <div class="item active">
-        <img src="../public/img/headlineSlide.jpg" class="img-responsive">
-        <div class="carousel-caption smMargin col-sm-12">
-          <div class="sliderTitle">
-            <p class="aboutText">
-              {{about.full_name}}
-            </p>
-            <p id="tags">
-              {{about.headline}}
-              <p>
-                <hr/>
-              </div>
-              <p class="aboutText">"{{about.aim}}"
-              </p>
-            </div>
-          </div>
+  <!-- First Featurette -->
+  <div class="featurette" id="about">
+    <img class="featurette-image img-circle img-responsive pull-right profile-img" src="../public/img/mean.png">
+    <h2 class="featurette-heading">{{about.aim}}
+      <span class="text-muted"></span>
+    </h2>
+    <p class="lead">"{{about.quote}}"</p>
+  </div>
 
-          <div class="item">
-            <img src="../public/img/bioSlide.jpg" class="img-responsive">
-            <div class="carousel-caption lgMargin">
-              <div class="sliderTitle">
-                <p class="aboutText">
-                  {{about.full_name}}
-                </p>
-                <hr/>
-              </div>
-              <p class="aboutText">
-                {{about.bio_short}}
-              </p>
-            </div>
-          </div>
+  <hr class="featurette-divider">
 
-          <div class="item">
-            <img src="../public/img/hobbySlide.jpg" class="img-responsive">
-            <div class="carousel-caption smMargin">
-              <div class="sliderTitle">
-                <p class="aboutText">
-                  {{about.full_name}}
-                </p>
-                <hr/>
-              </div>
-              <p class="aboutText">
-                Things I enjoy!
-              </p>
-              <ul ng-repeat="item in about.interest" id="interests">
-                <div class="col-md-6">
-                  <li class="interestText">
-                    {{item}}
-                  </li>
-                </div>
-              </ul>
-            </div>
-          </div>
+  <!-- Second Featurette -->
+  <div class="featurette" id="services">
+    <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+    <h2 class="featurette-heading">A little about me...
+      <span class="text-muted"></span>
+    </h2>
+    <p class="lead">{{about.bio_short}}</p>
+  </div>
 
-          <div class="item">
-            <img src="../public/img/longBioSlide.jpg" class="img-responsive">
-            <div class="carousel-caption smMargin">
-              <div class="sliderTitle">
-                <p class="aboutText">
-                  {{about.full_name}}
-                </p>
-                <hr/>
-              </div>
-              <h4>
-                <small id="quote">"{{about.quote}}"</small>
-              </h4>
-              <p class="interestText">
-                {{about.long_bio}}
-              </p>
-            </div>
-          </div>
-        </div>
+  <hr class="featurette-divider">
 
-        <span class="left carousel-control" data-target="#Carousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-        </span>
-        <span class="right carousel-control" data-target="#Carousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </span>
+  <!-- Third Featurette -->
+  <div class="featurette" id="contact">
+    <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+    <h2 class="featurette-heading">Long Story Short!
+      <span class="text-muted"></span>
+    </h2>
+    <p class="lead">{{about.long_bio}}</p>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <!-- Footer -->
+  <footer>
+    <div class="row">
+      <div class="col-lg-12 col-xs-12">
+        <p>Copyright &copy; {{about.full_name}} 2016</p>
       </div>
     </div>
+  </footer>
+
+</div>
+<!-- /.container -->
