--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-6" ng-repeat="project in projects">
-      <a href="" ng-click="showLanguage(project.title)">
+      <a href="" class="first after" ng-click="showLanguage(project.title)">
         {{project.title}}
         <img class="img-responsive portfolio-item sm-project-pic" src="{{project.image}}" alt="">
       </a>
