--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,17 +1,29 @@
 body {
   font-family: 'Josefin Sans', sans-serif;
+  background-color: #F2F2F2;
 }
 
 /*profile*/
 
-.profile-img{
-
+.img-prof {
+  height: 225px;
+  width: auto;
 }
-.divider{
-  padding-bottom: 20px;
+.divider {
+  margin: 30 0;
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+  opacity: .2;
 }
 .featurette-divider {
-  margin: 80px 0;
+  margin: 80 0;
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+  opacity: .2;
 }
 .featurette {
   overflow: hidden;
@@ -26,7 +38,7 @@ body {
   font-size: 50px;
 }
 footer {
-  margin: 50px 0;
+  margin: 20px 0;
 }
 @media(max-width:1200px) {
   .featurette-divider {
