--- a/public/css/sidenav.css
+++ b/public/css/sidenav.css
@@ -155,23 +155,7 @@ a.first, a.first:visited, a.first:hover, a.first:active {
   transition: 0.5s color ease;
   text-decoration: none;
   color: black;
-  font-size: 2.5em;
-}
-/*Showcase*/
-
-.portfolio-item {
-  margin-bottom: 25px;
-}
-.lg-project-pic {
-  height: 400px;
-  width: 700px;
-}
-.sm-project-pic {
-  height: 200px;
-  width: 500px;
-}
-.intro-social-buttons {
-  padding-top: 20px;
+  font-size: 1.5em;
 }
 
 /*Media*/
@@ -197,4 +181,26 @@ a.first, a.first:visited, a.first:hover, a.first:active {
     position: relative;
     margin-right: 0;
   }
+}
+
+/*Showcase*/
+
+.portfolio-item {
+  margin-bottom: 25px;
+}
+.lg-project-pic {
+  height: 400px;
+  width: 700px;
+}
+.sm-project-pic {
+  height: 200px;
+  width: 500px;
+  
+}
+.sm-project-pic:hover {
+opacity: .3;
+
+}
+.intro-social-buttons {
+  padding-top: 20px;
 }
