--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -44,7 +44,7 @@
       <h3 class="page-header">Projects</h3>
     </div>
 
-    <div class="col-sm-3 col-xs-6" ng-repeat="project in projects">
+    <div class="col-sm-3 col-xs-6" ng-repeat="project in projects" ng-mouseover="animateSmallImg = true" ng-mouseleave="animateSmallImg = false" ng-class="{'animated pulse':animateSmallImg}">
       <a href="" class="first after" ng-click="showLanguage(project.title)">
         {{project.title}}
         <img class="img-responsive portfolio-item sm-project-pic" src="{{project.image}}" alt="">
