--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <!-- Portfolio Item Heading -->
   <div class="row" ng-show="query" ng-repeat="project in projects | filter: { title: query }">
-    <div class="col-lg-12" ng-class="">
+    <div class="col-lg-12">
       <h1 class="page-header">Project Showcase
         <small>{{project.title}}</small>
       </h1>
