added skills to skills.json; templated coding state

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -117,3 +117,14 @@ footer {
 .intro-message {
   padding-top: 100px;
 }
+
+/*Languages*/
+
+.coding-languages{
+  height: 160px;
+  width: auto;
+    text-align: center;
+}
+.tile{
+
+}
