--- a/public/views/index.html
+++ b/public/views/index.html
@@ -28,7 +28,7 @@
     <div id="wrapper" ng-class="{'toggled': showNav}">
 
       <!-- Sidebar -->
-      <a href="" class="btn btn-default" id="menu-toggle" ng-click="activeNav()" ng-show="showNav">
+      <a href="" class="btn btn-default" id="menu-toggle" ng-click="activeNav()" >
         <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
       </a>
       <div id="sidebar-wrapper" ng-class="{'toggled': showNav}">
