--- a/public/views/index.html
+++ b/public/views/index.html
@@ -57,7 +57,7 @@
       </li>
       <li>
         <a ui-sref="code" class="eigth before after" ng-click="activeNav()">
-          <span class="menu-text">Languages</span>
+          <span class="menu-text">My Tools</span>
         </i>
       </a>
     </li>
