--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,26 +1,23 @@
-<div class="container-fluid">
-  <div class="jumbotron">
-    <div class="col-xs-12">
-      <ul class="list-inline">
-        <li>
-          <a href="https://twitter.com/NotThefakeIB" target="_blank" class="btn btn-default">
-            <i class="fa fa-twitter fa-fw"></i>
-            <span class="network-name">Twitter</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/ibaena" target="_blank" class="btn btn-default ">
-            <i class="fa fa-github fa-fw"></i>
-            <span class="network-name">Github</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://linkedin.com/in/ivanbaena" target="_blank" class="btn btn-default">
-            <i class="fa fa-linkedin fa-fw"></i>
-            <span class="network-name">Linkedin</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<div class="container-fluid" id="matrix">
+
+  <p class="tagline">
+    ivan@Ivan-PC: Hello my name is Ivan Baena.
+  </p>
+  <p class="tagline">
+    ivan@Ivan-PC: I am a Full Stack Web Developer.
+  </p>
+  <p class="tagline">
+    ivan@Ivan-PC: I love everything about the web, except Internet Explorer.
+  </p>
+  <p class="tagline">
+    ivan@Ivan-PC: I love creating new things with HTML5, CSS3, NodeJS, AngularJS and Javascript.
+  </p>
+  <p class="tagline">
+    ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
+  </p>
+  <p class="tagline">
+    ivan@Ivan-PC: If you think I am suitable for your project or if you’d just like to say hello, feel free to contact me.
+  </p>
+
+
 </div>
