--- a/public/views/index.html
+++ b/public/views/index.html
@@ -61,7 +61,24 @@
         </i>
       </a>
     </li>
+    <li>
+      <a class="eigth before after" ng-click="activeNav()" href="https://linkedin.com/in/ivanbaena" target="_blank">
+        <span class="menu-text">LinkedIn</span>
+      </i>
+    </a>
+  </li>
   <li>
+    <a class="eigth before after" ng-click="activeNav()" href="https://github.com/ibaena" target="_blank">
+      <span class="menu-text">Github</span>
+    </i>
+  </a>
+</li>
+<li>
+  <a class="eigth before after" ng-click="activeNav()" href="https://twitter.com/NotThefakeIB" target="_blank">
+    <span class="menu-text">Twitter</span>
+  </i>
+</a>
+</li>
 </ul>
 </div>
 <!-- /#sidebar-wrapper -->
