--- a/public/views/partials/code.html
+++ b/public/views/partials/code.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h2>My Toolbelt</h2>
+  <h2 id="center-skills">Programming languages & technologies I use to code solutions to problems</h2>
   <div class="row" ng-hide="reveal">
     <div class="col-lg-3 col-md-4 col-xs-12" ng-repeat="skill in coding" ng-class="{'animated fadeIn': revealAnimate}">
       <div ng-class="{'animated infinite pulse': animateCoding}" class="tile" ng-mouseover="animateCoding = true" ng-mouseleave="animateCoding = false">
