--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,23 +1,24 @@
 <div class="container-fluid" id="matrix">
+  <div class="col-xs-12">
+    <p class="tagline">
+      ivan@Ivan-PC: Hello my name is Ivan Baena.
+    </p>
+    <p class="tagline">
+      ivan@Ivan-PC: I am a Full Stack Web Developer.
+    </p>
+    <p class="tagline">
+      ivan@Ivan-PC: I love everything about the web, except Internet Explorer.
+    </p>
+    <p class="tagline">
+      ivan@Ivan-PC: I love creating new things with HTML5, CSS3, NodeJS, AngularJS and Javascript.
+    </p>
+    <p class="tagline">
+      ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
+    </p>
+    <p class="tagline">
+      ivan@Ivan-PC: If you think I am suitable for your project or if you’d just like to say hello, feel free to contact me.
+    </p>
 
-  <p class="tagline">
-    ivan@Ivan-PC: Hello my name is Ivan Baena.
-  </p>
-  <p class="tagline">
-    ivan@Ivan-PC: I am a Full Stack Web Developer.
-  </p>
-  <p class="tagline">
-    ivan@Ivan-PC: I love everything about the web, except Internet Explorer.
-  </p>
-  <p class="tagline">
-    ivan@Ivan-PC: I love creating new things with HTML5, CSS3, NodeJS, AngularJS and Javascript.
-  </p>
-  <p class="tagline">
-    ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
-  </p>
-  <p class="tagline">
-    ivan@Ivan-PC: If you think I am suitable for your project or if you’d just like to say hello, feel free to contact me.
-  </p>
-
+  </div>
 
 </div>
