--- a/public/views/index.html
+++ b/public/views/index.html
@@ -91,12 +91,20 @@
       <div ui-view></div>
     </div>
   </div>
+  <footer>
+    <div class="row">
+      <div class="col-lg-12 col-xs-12">
+        <p>Copyright &copy; Ivan Baena 2016</p>
+      </div>
+    </div>
+  </footer>
 </div>
 </div>
 <!-- /#page-content-wrapper -->
 </div>
 <!-- /#wrapper -->
 
+</div>
 </body>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
