--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" id="matrix">
-  <div class="col-xs-12">
+  <div class="visible-lg">
     <p class="tagline">
       ivan@Ivan-PC: Hello my name is Ivan Baena.
     </p>
@@ -19,6 +19,26 @@
       ivan@Ivan-PC: If you think I am suitable for your project or if you’d just like to say hello, feel free to contact me.
     </p>
 
+  </div>
+  <div class="visible-xs">
+    <p class="taglineMobile">
+      ivan@Ivan-PC: Hello my name is Ivan Baena.
+    </p>
+    <p class="taglineMobile">
+      ivan@Ivan-PC: I am a Full Stack Web Developer.
+    </p>
+    <p class="taglineMobile">
+      ivan@Ivan-PC: I love everything about the web, except Internet Explorer.
+    </p>
+    <p class="taglineMobile">
+      ivan@Ivan-PC: I love creating new things with HTML5, CSS3, NodeJS, AngularJS and Javascript.
+    </p>
+    <p class="taglineMobile">
+      ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
+    </p>
+    <p class="taglineMobile">
+      ivan@Ivan-PC: If you think I am suitable for your project or if you’d just like to say hello, feel free to contact me.
+    </p>
   </div>
 
 </div>
