fixed landing page hidden class not working

--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" id="matrix">
-  <div class="visible-lg">
+  <div class="visible-lg visible-md">
     <p class="tagline">
       ivan@Ivan-PC: Hello my name is Ivan Baena.
     </p>
@@ -20,7 +20,7 @@
     </p>
 
   </div>
-  <div class="visible-xs">
+  <div class="visible-xs visible-sm">
     <p class="taglineMobile">
       ivan@Ivan-PC: Hello my name is Ivan Baena.
     </p>
