edite to visible classes

--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -16,7 +16,7 @@
       ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
     </p>
     <p class="tagline">
-      ivan@Ivan-PC: If you think I am suitable for your project or if you’d just like to say hello, feel free to contact me.
+      ivan@Ivan-PC: If you’d just like to say hello, feel free to contact me.
     </p>
 
   </div>
