--- a/public/views/partials/showcase.html
+++ b/public/views/partials/showcase.html
@@ -5,6 +5,7 @@
       <h1 class="page-header">Project Showcase
         <small>{{project.title}}</small>
       </h1>
+        <hr class="featurette-divider">
     </div>
   </div>
 
@@ -42,6 +43,7 @@
   <div class="row">
     <div class="col-lg-12">
       <h3 class="page-header">Projects</h3>
+        <hr class="featurette-divider">
     </div>
 
     <div class="col-sm-3 col-xs-6" ng-repeat="project in projects" ng-mouseover="animateSmallImg = true" ng-mouseleave="animateSmallImg = false" ng-class="{'animated pulse':animateSmallImg}">
