--- a/public/views/index.html
+++ b/public/views/index.html
@@ -94,6 +94,7 @@
   <footer>
     <div class="row">
       <div class="col-lg-12 col-xs-12">
+          <hr class="featurette-divider">
         <p>Copyright &copy; Ivan Baena 2016</p>
       </div>
     </div>
