added email to landing

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -254,3 +254,12 @@ p.tagline:nth-child(6) {
   width: 100%;
 
 }
+
+.email-hmpg{
+  text-decoration: none;
+  color:lime;
+}
+.email-hmpg:hover{
+  background-color: white;
+  color: black;
+}
