--- a/public/views/partials/home.html
+++ b/public/views/partials/home.html
@@ -16,7 +16,8 @@
       ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
     </p>
     <p class="tagline">
-      ivan@Ivan-PC:  Interested? Questions? Lets talk! Say hello, feel free to contact me.
+      ivan@Ivan-PC: Interested? Questions? Lets talk! Say hello, @
+      <a class="email-hmpg" href="mailto:ivan.baena04@gmail.com">ivan.baena04@gmail.com</a>
     </p>
 
   </div>
@@ -37,7 +38,8 @@
       ivan@Ivan-PC: Coding and bringing an idea to life are my driving passions.
     </p>
     <p class="taglineMobile">
-      ivan@Ivan-PC: Interested? Questions? Lets talk! Say hello, feel free to contact me.
+      ivan@Ivan-PC: Interested? Questions? Lets talk! Say hello, @
+      <a class="email-hmpg" href="mailto:ivan.baena04@gmail.com">ivan.baena04@gmail.com</a>
     </p>
   </div>
 
